@@ -1,4 +1,4 @@
-# LIST OF CHANGES FROM LAST RELEASE:			<$Revision: 1.2224 $>
+# LIST OF CHANGES FROM LAST RELEASE:			<$Revision: 1.2225 $>
 #
 #
 # [Note: This file does not mention every change made to the NetBSD source tree.
@@ -433,3 +433,4 @@ Changes from NetBSD 7.0 to NetBSD 8.0:
 	ptrace(2): Add hardware assisted breakpoint/watchpoint API:
 		PT_READ_WATCHPOINT, PT_WRITE_WATCHPOINT and
 		PT_COUNT_WATCHPOINTS [kamil 20161215]
+	rtadvd(8): Support -p <pidfile> option. [ozaki-r 20161216]
